--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,15 @@
 {
-    "name": "My app",
-    "short_name": "My app",
-    "start_url": "/",
-    "display": "standalone",
-    "theme_color": "#fff",
-    "background_color": "#ffffff",
-    "icons": [
-        {
-            "src": "/asset/img/app_icon_Dusta.jpg",
-            "sizes": "64x64",
-            "type": "image/png"
-        }
-    ]
+	"name": "Eiga No Neko - Streaming VF & VOSTFR",
+	"short_name": "Eiga No Neko",
+	"start_url": "/",
+	"display": "standalone",
+	"theme_color": "#fff",
+	"background_color": "#ffffff",
+	"icons": [
+		{
+			"src": "https://ab1.floagg.com/asset/img/app_icon_Dusta.jpg",
+			"sizes": "64x64",
+			"type": "image/png"
+		}
+	]
 }
