Default template - multi welcome lang

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@
 /usr/template/enn
 /usr/template/floagg
 /usr/template/eiganoneko.com
+/usr/template/Eiga-No-Neko
 
 /usr/plugins/.DS_Store
 /usr/plugins/ennNode
